kube/deploy/vm/_kubevirt/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kubevirt
  labels:
    pod-security.kubernetes.io/enforce: "privileged"
    kubevirt.io: ""
