kube/deploy/vm/_kubevirt/netpol.yaml
---
# yaml-language-server: $schema=https://crds.jank.ing/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &app kubevirt
  namespace: *app
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: *app
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: *app
    - toEntities:
        - kube-apiserver
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "6443"
              protocol: "TCP"
            - port: "6443"
              protocol: "UDP"
